kubernetes/apps/files/rclone/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/service.json
apiVersion: v1
kind: Service
metadata:
  name: rclone-rclone
spec:
  ports:
    - name: webdav
      port: 8080
